--- a/whitesource.config
+++ b/whitesource.config
@@ -1,1 +1,10 @@
-
+python.path=python3.8
+python.pipPath=pip3
+python.resolveDependencies = true
+python.ignorePipInstallErrors=true
+python.installVirtualenv=true
+python.resolveSetupFiles=true
+python.runPipenvPreStep=true
+python.pipenvDevDependencies=true
+python.IgnorePipenvInstallErrors=true
+python.runPoetryPreStep=true
